[package]
name = "sui-sponsor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8"
actix-web = "4.3"
actix-cors = "0.6.4"
actix-middleware = { git = "https://github.com/ticketland-io/actix-middleware", version = "0.1.0" }
bincode = "1.3"
bcs = "0.1"
dotenv = "0.15"
redis = { version = "0.23.0", features = ["tokio-comp"] }
deadpool-redis = { version = "0.12", features = ["rt_tokio_1"] }
rslock = "0.1"
eyre = "0.6.8"
env_logger = "0.10"
envconfig = "0.10"
log = "0.4"
sui-keys = { git = "https://github.com/MystenLabs/sui", rev = "9588990" }
sui-sdk = { git = "https://github.com/MystenLabs/sui", rev = "9588990" }
sui-types = { git = "https://github.com/MystenLabs/sui", rev = "9588990" }
shared-crypto = { git = "https://github.com/MystenLabs/sui", rev = "9588990" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.27", features = ["macros", "rt-multi-thread"] }
